Fix overflow of long titles in cards with no banner image

--- a/funnel/static/css/app.css
+++ b/funnel/static/css/app.css
@@ -1053,6 +1053,8 @@ html.touch .collapsible__body--disable {
 .card__image--default {
   background-color: #F6EDE3;
   min-height: 125px;
+  position: relative;
+  overflow: hidden;
 }
 
 .card__calendar {
@@ -1063,11 +1065,13 @@ html.touch .collapsible__body--disable {
 .card__image__tagline {
   position: absolute;
   color: #333;
-  top: 35%;
+  top: 50%;
   left: 16px;
   right: 16px;
   text-align: center;
   font-size: 18px;
+  transform: translateY(-50%);
+  max-height: 100%;
 }
 
 @media (min-width: 768px) {
